--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <title>Sprint 1</title>
     </head>
     <body>
-        Dorian Yesid
+        <ul>
+            <li>Dorian Yesid Fernandez</li>
+        </ul>
     </body>
 </html>
