--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
                             <td>Dorian Yesid Fernández Estrella</td>
                             <td>Development Team</td>
                         </tr>
+                        <tr>
+                            <td>Jairo Enrique Barrera Gomez</td>
+                            <td>Scroom Master</td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
