--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                             <td>Development Team</td>
                         </tr>
                         <tr>
+                            <th scope="row">2</th>
                             <td>Jairo Enrique Barrera Gomez</td>
                             <td>Scroom Master</td>
                         </tr>
