--- a/index.html
+++ b/index.html
@@ -33,6 +33,16 @@
                             <td>Jairo Enrique Barrera Gomez</td>
                             <td>Scroom Master</td>
                         </tr>
+                        <tr>
+                            <th scope="row">3</th>
+                            <td>Yarlides Perez Oyola</td>
+                            <td>Product Owner</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">3</th>
+                            <td>Javier Gil</td>
+                            <td>Development Team</td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
